--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="ajax.js"></script>
+    <script type="module" src="modules/ajax.js"></script>
     <script type="module" src="index.js" defer></script> <!-- defer для асинхронной загрузки JS -->
   </body>
 </html>
