Выделены компоненты меню, заголовка и ввода.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Адаптивность для мобилки -->
     <title>QuickFlow</title>
+    <link href="/Components/MenuComponent/MenuComponent.css" rel="stylesheet"/>
+    <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet"/>
+    <link href="/Components/InputComponent/InputComponent.css" rel="stylesheet"/>
     <link href="index.css" rel="stylesheet"/>
   </head>
   <body>
