--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Адаптивность для мобилки -->
-    <title>QuickFlow</title>
-    <link href="/Components/MenuComponent/MenuComponent.css" rel="stylesheet"/>
-    <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet"/>
-    <link href="/Components/InputComponent/InputComponent.css" rel="stylesheet"/>
-    <link href="index.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="modules/ajax.js"></script>
-    <script type="module" src="index.js" defer></script> <!-- defer для асинхронной загрузки JS -->
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Адаптивность для мобилки -->
+        <title>QuickFlow</title>
+        <link href="/Components/MenuComponent/MenuComponent.css" rel="stylesheet" />
+        <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet" />
+        <link href="/Components/InputComponent/InputComponent.css" rel="stylesheet" />
+        <link href="index.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="modules/ajax.js"></script>
+        <script src="../node_modules/handlebars/dist/handlebars.runtime.js"></script>
+        <script type="module" src="index.js" defer></script>
+        <!-- defer для асинхронной загрузки JS -->
+    </body>
 </html>
