--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,14 @@
         <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet" />
         <link href="/Components/InputComponent/InputComponent.css" rel="stylesheet" />
         <link href="index.css" rel="stylesheet" />
+        <link href="/Components/InputComponent/InputComponent.css" rel="stylesheet" />
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="modules/ajax.js"></script>
-        <script src="../node_modules/handlebars/dist/handlebars.runtime.js"></script>
         <script type="module" src="index.js" defer></script>
+        <script src="/handlebars/dist/handlebars.js"></script>
+        <script src="/Components/precompiledTemplates.js"></script>
         <!-- defer для асинхронной загрузки JS -->
     </body>
 </html>
