--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
         <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet" />
         <link href="/Components/UI/InputComponent/InputComponent.css" rel="stylesheet" />
         <link href="index.css" rel="stylesheet" />
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="/favicon.svg">
     </head>
     <body>
         <div id="root"></div>
