--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Адаптивность для мобилки -->
         <title>QuickFlow</title>
-        <link href="/Components/MenuComponent/MenuComponent.css" rel="stylesheet" />
-        <link href="/Components/HeaderComponent/HeaderComponent.css" rel="stylesheet" />
-        <link href="/Components/UI/InputComponent/InputComponent.css" rel="stylesheet" />
         <link href="index.css" rel="stylesheet" />
         <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="/favicon.svg">
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="modules/ajax.js"></script>
-        <script type="module" src="index.js" defer></script>
-        <!-- defer для асинхронной загрузки JS -->
+        <!-- <script type="module" src="modules/ajax.js"></script>
+        <script type="module" src="index.js" defer></script> -->
+        <script src="bundle.js" defer></script>
     </body>
 </html>
