--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>QuickFlow</title>
-        <link href="styles/styles.css" rel="stylesheet"/>
+        <link href="/styles/styles.css" rel="stylesheet"/>
         <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="/favicon.svg">
     </head>
     <body>
         <div id="root"></div>
-        <script src="bundle.js" defer></script>
+        <script src="/bundle.js" defer></script>
     </body>
 </html>
