--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>QuickFlow</title>
+        <link rel="preconnect" href="//www.quickflowapp.ru">
         <link href="/styles/styles.css" rel="stylesheet"/>
         <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="/favicon.svg">
