--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,17 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8"/>
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>QuickFlow</title>
         <link rel="preconnect" href="//www.quickflowapp.ru">
         <link href="/styles/styles.css" rel="stylesheet"/>
         <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="/favicon.svg">
+
+        <!-- Safari -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default">
     </head>
     <body>
         <div id="root"></div>
