--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8"/>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
         <link rel="manifest" href="manifest.json">
         <title>QuickFlow</title>
         <link rel="preconnect" href="//www.quickflowapp.ru">
@@ -12,7 +12,7 @@
         <link rel="apple-touch-icon" href="/favicon.svg">
 
         <!-- Safari -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="default">
     </head>
     <body>
