--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
         <link rel="manifest" href="manifest.json">
         <title>QuickFlow</title>
         <link rel="preconnect" href="//www.quickflowapp.ru">
         <link href="/styles/styles.css" rel="stylesheet"/>
-        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-        <link rel="apple-touch-icon" href="/favicon.svg">
+        <link rel="icon" href="icons/icon-128x128.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="icons/icon-128x128.svg">
 
         <!-- Safari -->
         <meta name="mobile-web-app-capable" content="yes">
