--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
         <title>QuickFlow</title>
         <link rel="preconnect" href="//www.quickflowapp.ru">
         <link href="/styles/styles.css" rel="stylesheet"/>
-        <link rel="icon" href="icons/icon-128x128.svg" type="image/svg+xml">
-        <link rel="apple-touch-icon" href="icons/icon-128x128.svg">
+
+        <!-- <link rel="icon" href="icons/icon-128x128.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="icons/icon-128x128.svg"> -->
+        <link rel="icon" href="/icons/icon-192x192.png" type="image/png">
+        <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+
 
         <!-- Safari -->
         <meta name="mobile-web-app-capable" content="yes">
