--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
-        <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="/manifest.json">
         <title>QuickFlow</title>
         <link rel="preconnect" href="//www.quickflowapp.ru">
         <link href="/styles/styles.css" rel="stylesheet"/>
